--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:text="SIGN UP"
+        android:fontFamily="@font/nunito_bold"
         android:textColor="#FC8080"
         android:gravity="center"
         android:textSize="36sp"
@@ -24,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="90dp"
         android:text="FOR YOUR ACCOUNT"
+        android:fontFamily="@font/nunito_semibold"
         android:textColor="#FC8080"
         android:letterSpacing="0.25"
         android:gravity="center"
@@ -79,6 +81,7 @@
         android:layout_marginTop="40dp"
         android:background="@drawable/bg_button_reg"
         android:text="Sign Up"
+        android:fontFamily="@font/nunito_bold"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textAllCaps="false"
@@ -95,6 +98,7 @@
             android:gravity="center"
             android:text="Already have a account? "
             android:textColor="@color/enable_icon_color"
+            android:fontFamily="@font/nunito_bold"
             android:textSize="18sp"
             android:textStyle="bold"/>
         <TextView
@@ -104,6 +108,7 @@
             android:layout_marginTop="20dp"
             android:gravity="center"
             android:text="Sign in"
+            android:fontFamily="@font/nunito_bold"
             android:textColor="#4AC7FF"
             android:textSize="20sp"
             android:textStyle="bold"/>
