--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,6 +26,7 @@
                 android:layout_marginTop="35dp"
                 android:gravity="center"
                 android:text="@string/app_title"
+                android:fontFamily="@font/encodesans_bold"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -35,6 +36,7 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="30dp"
                 android:text="@string/recommendation_outfit"
+                android:fontFamily="@font/encodesans_semibold"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -57,6 +59,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:text="@string/account_gallery"
+            android:fontFamily="@font/encodesans_semibold"
             android:textSize="20sp"
             android:textStyle="bold" />
 
