--- a/app/src/main/res/layout/fragment_model.xml
+++ b/app/src/main/res/layout/fragment_model.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.ModelFragment"
     android:background="@color/background_color"
     android:orientation="vertical">
@@ -19,19 +20,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Upload Your Model"
+        android:fontFamily="@font/encodesans_semibold"
         android:textStyle="bold"
         android:textSize="20sp"
         android:gravity="center" />
 
-    <ImageView
-        android:id="@+id/image_preview"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card_view"
         android:layout_width="250dp"
         android:layout_height="360dp"
-        android:layout_gravity="center"
         android:layout_marginTop="30dp"
-        android:background="@drawable/image_preview" />
+        android:clickable="true"
+        android:focusable="true"
+        app:cardCornerRadius="20dp"
+        android:layout_gravity="center">
+
+        <ImageView
+            android:id="@+id/image_preview"
+            android:layout_width="250dp"
+            android:layout_height="362dp"
+            android:layout_gravity="center"
+            android:background="@drawable/image_preview"
+            android:scaleType="centerCrop"/>
+
+    </com.google.android.material.card.MaterialCardView>
 
     <Button
+        android:id="@+id/btn_gallery"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Open Gallery"
