--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -19,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Result"
+        android:fontFamily="@font/encodesans_semibold"
         android:textStyle="bold"
         android:textSize="20sp"
         android:gravity="center" />
@@ -28,6 +29,7 @@
         android:layout_width="250dp"
         android:layout_height="360dp"
         android:layout_gravity="center"
+        android:scaleType="centerCrop"
         android:layout_marginTop="30dp"
         android:background="@drawable/image_preview" />
 
