--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -7,12 +7,20 @@
     android:orientation="vertical"
     android:background="@color/background_color">
 
+    <ImageView
+        android:id="@+id/btn_back"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:src="@drawable/ic_back"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Step 3 of 3"
         android:gravity="center"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="-10dp"
         android:textSize="16sp" />
 
     <TextView
@@ -27,7 +35,7 @@
     <ImageView
         android:id="@+id/image_preview"
         android:layout_width="250dp"
-        android:layout_height="360dp"
+        android:layout_height="350dp"
         android:layout_gravity="center"
         android:scaleType="centerCrop"
         android:layout_marginTop="30dp"
