--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/constsView"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -21,7 +22,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/ic_baseline_camera_24"
-        app:tint="@color/white"
+        app:tint="#FC8080"
         />
 
     <ImageView
@@ -42,6 +43,6 @@
         app:layout_constraintEnd_toEndOf="@+id/view_finder"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_flip_camera_android_24"
-        app:tint="@android:color/white" />
+        app:tint="#FC8080" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
