--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="-10dp"
         android:gravity="center"
-        android:text="Step 2 of 3"
+        android:text="Step 2 of 2"
         android:textSize="16sp" />
 
     <TextView
@@ -46,7 +46,7 @@
         <ImageView
             android:id="@+id/image_preview"
             android:layout_width="250dp"
-            android:layout_height="362dp"
+            android:layout_height="350dp"
             android:layout_gravity="center"
             android:background="@drawable/image_preview"
             android:scaleType="centerCrop"/>
@@ -59,19 +59,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/custom_button"
         android:paddingHorizontal="40dp"
         android:text="Open Camera"
         android:textAllCaps="false"
         android:textSize="16sp" />
 
-    <ImageButton
+    <Button
         android:id="@+id/btn_next"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/custom_circle_button"
-        android:src="@drawable/ic_forward" />
+        android:layout_marginTop="10dp"
+        android:background="@drawable/custom_button"
+        android:paddingHorizontal="40dp"
+        android:text="Finish"
+        android:textAllCaps="false"
+        android:textSize="16sp" />
+
 </LinearLayout>
